2_Kubernetes/5_ingress/externalDNS.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    # certmanager.k8s.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dev-2171.crowdplaysport.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
  # tls:
  #   - hosts:
  #     - external3.tegoesports.com
  #     secretName: external-cert

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
