2_Kubernetes/5_ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path-ingress
spec:
  rules:
  - http:
      paths:
      - path: /web2
        backend:
          serviceName: web2
          servicePort: 8080
